Add 'type' property to form data for server submission

--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,11 @@ body {
     z-index: 1;
 }
 
+#winModal .green-text {/* for the rank message*/
+    color: green;
+}
+
+
 .modal-content p {
     color: #888;
     font-weight:200;
