--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,8 @@ body {
     font-weight:200;
     font-size: 18px;
     font-stretch: 100%;
-    line-height: 1.5;  
+    line-height: 1.5;
+    margin: 3px 0; /* Adjust the value as needed */
 }
 
 .modal-buttons {
